--- a/public/index.html
+++ b/public/index.html
@@ -2,44 +2,112 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ORCA Info App</title>
+
   <style>
+    :root {
+      --bg: #0f172a;        
+      --card: #1e293b;    
+      --accent: #7c3aed;    
+      --text: #e2e8f0;    
+      --subtext: #94a3b8;   
+    }
+
     body {
+      background: var(--bg);
+      color: var(--text);
+      margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom right, #0ea5e9, #38bdf8);
+      padding: 40px 20px;
       text-align: center;
-      padding-top: 70px;
+    }
+
+    .container {
+      max-width: 480px;
+      margin: auto;
+      background: var(--card);
+      padding: 22px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,0.05);
+    }
+
+    h1 {
+      margin-bottom: 8px;
       color: white;
     }
-    .card {
-      background: rgba(255, 255, 255, 0.15);
-      padding: 20px;
-      border-radius: 15px;
-      width: 400px;
-      margin: auto;
-      backdrop-filter: blur(10px);
+
+    .subtitle {
+      color: var(--subtext);
+      margin-bottom: 18px;
+    }
+
+    .info-box {
+      text-align: left;
+      margin-top: 14px;
+    }
+
+    .label {
+      font-weight: bold;
+      margin-top: 12px;
+      display: block;
+      color: var(--accent);
+    }
+
+    .value {
+      margin-top: 4px;
+      color: var(--text);
+    }
+
+    button {
+      margin-top: 20px;
+      padding: 10px 18px;
+      border: none;
+      background: var(--accent);
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
+      transition: 0.2s;
+    }
+
+    button:hover {
+      opacity: 0.85;
     }
   </style>
 </head>
 <body>
 
-  <h1>🚀 ORCA Info App</h1>
-  <div class="card">
-    <h2 id="msg">Loading...</h2>
-    <p id="desc"></p>
-    <p id="purpose"></p>
-    <p id="time"></p>
+  <div class="container">
+    <h1>ORCA Info App 🚀</h1>
+    <p class="subtitle">Kelompok ORCA — Nira & Ficha</p>
+
+    <div class="info-box">
+      <span class="label">Pesan:</span>
+      <p id="msg" class="value">Memuat...</p>
+
+      <span class="label">Tujuan Aplikasi:</span>
+      <p id="purpose" class="value">—</p>
+
+      <span class="label">Server Time:</span>
+      <p id="time" class="value">—</p>
+    </div>
+
+    <button onclick="loadInfo()">Refresh Info</button>
   </div>
 
   <script>
-    fetch("/api/info")
-      .then(res => res.json())
-      .then(data => {
-        document.getElementById("msg").textContent = data.message;
-        document.getElementById("desc").textContent = data.description;
-        document.getElementById("purpose").textContent = data.purpose;
-        document.getElementById("time").textContent = "Server Time: " + data.serverTime;
-      });
+    function loadInfo() {
+      fetch("/api/info")
+        .then(res => res.json())
+        .then(data => {
+          document.getElementById("msg").textContent = data.message;
+          document.getElementById("purpose").textContent = data.purpose || data.description;
+          document.getElementById("time").textContent = data.serverTime;
+        });
+    }
+
+    loadInfo();
   </script>
 
 </body>
